Added some app.py stuff. Running into bugs though

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,9 @@
 <body>
 
 <h1>Welcome to our unnamed project </h1>
-
-
+Username:  <input type="text" name="username">
+Password: <input type="password" name="password">
+<input id="submit" type="submit" name="button" value="login">
+<input id="submit" type="submit" name="button" value="register">
 </body>
 </html>
