--- a/templates/home.html
+++ b/templates/home.html
@@ -3,9 +3,20 @@
 <body>
 
 <h1>Welcome to our unnamed project </h1>
-Username:  <input type="text" name="username">
-Password: <input type="password" name="password">
-<input type="submit" id="submit" name="login" value="Login">
-<input type="submit" id="submit" name="register" value="Register">
+<form action = "" method = "post">
+<tr>
+  <td align="left">
+    <input id="user" type="text" name="username">
+    <br />
+    <br />
+    <input id="pass" type="password" name="password">
+    </td>
+  <td align="left">
+    <input id="submit1" type="submit" name="button" value="login">
+    <br />
+    <input id="submit2" type="submit" name="button" value="register">
+    </td>
+</tr>
+</form>
 </body>
 </html>
