Finished login ui

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
-<html>
-<body>
 
-<h1>Welcome to our unnamed project </h1>
-<form action = "" method = "post">
-<tr>
-  <td align="left">
-    <input id="user" type="text" name="username">
-    <br />
-    <input id="pass" type="password" name="password">
-    </td>
-  </br/>
-  <td align="left">
-    <br>
-    <input id="submit1" type="submit" name="button" value="login">
-    <br />
-    <br>
-    <input id="submit2" type="submit" name="button" value="register">
-    </br>
-    </td>
-</tr>
-</form>
+<html>
+<head>
+  <link rel="stylesheet" href="../static/loginstyle.css">
+  <title></title>
+</head>
+<body>
+<div>
+  <div id = "main"class = "center">
+  <h1>Calendar Stats </h1>
+  <form action = "" method = "post">
+        <label for="user">Username:</label>
+        <input id="user" type="text" name="username">
+        <label for="pass">Password:   </label><input id="pass" type="password" name="password">
+        <input id="submit1" type="submit" name="button" value="login">
+        <input id="submit2" type="submit" name="button" value="register">
+  </form>
+  </div>
+</div>
+<footer>
+</footer>
 </body>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src = "../static/myjquery.js"></script>
 </html>
