--- a/templates/yourdata.html
+++ b/templates/yourdata.html
@@ -21,7 +21,7 @@
 </table>
 
 <form action="" method="POST">
-<input type="button" name="button" value="Go Back">
+<input type="submit" name="button" value="Go Back">
 </form>
 
 </body>
