--- a/templates/makeSchedule.html
+++ b/templates/makeSchedule.html
@@ -4,19 +4,22 @@
 <h1>Make your schedule</h1>
 <form action ="" method = post>
 <p>Enter the day you are busy in MM/DD/YYYY format</p>
-<select name="month">
+<select name="month" selected="selected">
+<option value=""></option>
 {% for number in range(1,13) %}
 <option value="{{number}}">{{number}}</option>
 {% endfor %}
 </select>
 
-<select name="day">
+<select name="day" selected="selected">
+<option value=""></option>
 {% for number in range(1,32) %}
 <option value="{{number}}">{{number}}</option>
 {% endfor %}
 </select>
 
-<select name="year">
+<select name="year" selected="selected">
+<option value=""></option>
 {% for number in range(1900,2015) %}
 <option value="{{number}}">{{number}}</option>
 {% endfor %}
@@ -24,25 +27,29 @@
 
 <p>Enter the time you are busy in HH:MM-HH:MM format military time</p>
 <p>
-<select name="hour1">
+<select name="hour1" selected="selected">
+<option value=""></option>
 {% for number in range(0,24) %}
 <option value="{{number}}">{{number}}</option>
 {% endfor %}
 </select>
 
-<select name="minute1">
+<select name="minute1" selected="selected">
+<option value=""></option>
 {% for number in range(0,60) %}
 <option value="{{number}}">{{number}}</option>
 {% endfor %}
 </select>
 -
-<select name="hour2">
+<select name="hour2" selected="selected">
+<option value=""></option>
 {% for number in range(0,24) %}
 <option value="{{number}}">{{number}}</option>
 {% endfor %}
 </select>
 
-<select name="minute2">
+<select name="minute2" selected="selected">
+<option value=""></option>
 {% for number in range(0,60) %}
 <option value="{{number}}">{{number}}</option>
 {% endfor %}
