--- a/templates/home.html
+++ b/templates/home.html
@@ -22,5 +22,5 @@
 </footer>
 </body>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script src = "../static/myjquery.js"></script>
+<script src = "../static/login.js"></script>
 </html>
