--- a/templates/makeSchedule.html
+++ b/templates/makeSchedule.html
@@ -14,6 +14,7 @@
 <div class = "pillM" id = "month">
 <label for="month">Month</label>
 <select name="month" id = "M">
+<option value=""></option>
 {% for number in range(1,13) %}
 <option value="{{number}}">{{number}}</option>
 {% endfor %}
@@ -23,6 +24,7 @@
 <div class = "pillD" id = "day">
 <label for="day">Day</label>
 <select name="day" id = "D">
+<option value=""></option>
 {% for number in range(1,32) %}
 <option value="{{number}}">{{number}}</option>
 {% endfor %}
@@ -32,6 +34,7 @@
 <div class = "pillY" id = "year">
 <label for="year">Year</label>
 <select name="year" id = "Y">
+<option value=""></option>
 {% for number in range(1900,2015) %}
 <option value="{{number}}">{{number}}</option>
 {% endfor %}
@@ -42,11 +45,13 @@
 <div class = "pill1">
 <label for "hour1">From</label>
 <select name="hour1">
+<option value=""></option>
 {% for number in range(0,24) %}
 <option value="{{number}}">{{number}}</option>
 {% endfor %}
 </select>
 <select name="minute1" id = "1">
+<option value=""></option>
 {% for number in range(0,60) %}
 <option value="{{number}}">{{number}}</option>
 {% endfor %}
@@ -55,11 +60,13 @@
 <div class = "pill2">
 <label for "hour2">To</label>
 <select name="hour2">
+<option value=""></option>
 {% for number in range(0,24) %}
 <option value="{{number}}">{{number}}</option>
 {% endfor %}
 </select>
 <select name="minute2" id ="2">
+<option value=""></option>
 {% for number in range(0,60) %}
 <option value="{{number}}">{{number}}</option>
 {% endfor %}
