--- a/templates/exampleIndex.html
+++ b/templates/exampleIndex.html
@@ -1,23 +1,36 @@
+
 <!DOCTYPE html>
 <html>
-<head>	
+<head>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	<title>Your Calendar</title>
 	<link rel="stylesheet" href="../static/calendar.css">
 </head>
 <body>
 <div class = "banner">
-<h1>Your Schedule</h1>
+<h1>Your data</h1>
 </div>
-<form action="" method="POST">
-<div class = "tableDiv">
 <table style="width:100%">
+<tr>
+	<td>Day</td>
+	<td>Time</td>
+</tr>
+<tr>
+<td> 04/03/1903 </td>
+<td> 07/01/2001 </td>
+</tr>
+<tr>
+<td> 7-16</td>
+<td> </td>
+</tr>
+
 
 </table>
-</div>
 
+<form action="" method="POST">
 <input type="submit" name="button" value="Go Back">
 </form>
+
 </body>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src = "../static/calendar.js"></script>
