--- a/templates/otherdata.html
+++ b/templates/otherdata.html
@@ -1,28 +1,24 @@
 <!DOCTYPE html>
 <html>
+<head>	
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	<title>Everyones' but yours Calendar</title>
+	<link rel="stylesheet" href="../static/calendar.css">
+</head>
 <body>
-<h1>Other data</h1>
+<div class = "banner">
+<h1>Your Schedule</h1>
+</div>
+<form action="" method="POST">
+<div class = "tableDiv">
 <table style="width:100%">
-<tr>
-<th> day </th>
-{% for x in dayList %}
-<td> {{x}} </td>
-{% endfor %}
-</tr>
-
-<tr>
-<th> times </th>
-{% for x in timeList %}
-<td> {{x}} </td>
-{% endfor %}
-</tr>
-
 
 </table>
+</div>
 
-<form action="" method="POST">
 <input type="submit" name="button" value="Go Back">
 </form>
-
 </body>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src = "../static/calendar.js"></script>
 </html>
